src/core/outputconfiguration.h
@@ -24,6 +24,8 @@ class KWIN_EXPORT OutputChangeSet
 {
 public:
     std::optional<std::weak_ptr<OutputMode>> mode;
+    std::optional<QSize> desiredModeSize;
+    std::optional<uint32_t> desiredModeRefreshRate;
     std::optional<bool> enabled;
     std::optional<QPoint> pos;
     std::optional<double> scale;
